
 Released on 
  
 New features and improvements:

   - ofaDossierOpen: open in read-only mode (todo #701).
   - ofaTVARecordProperties: set the auto-eval mode to True.
   - ofsOpe: set again the auto-eval mode to False, only using %EVAL() function.
   - ofoTVARecord: improve data control.
 
 Bug fixes:

   - Fix 'Closing period' menu item sensitivity when dossier is read-only.

 Other changes:

   - ofa_hub_dossier_is_writable(): new method.

-----------------------------------------------------------------------
 Version 0.55
 ============

 Released on 2016-04-20
  
 New features and improvements:

   - DDL Core v 31
   - ofaDossierProperties: cannot modify begin date if end of previous exercice is set.
   - ofaExerciceCloseAssistant: records the end date of the prevous exercice.
   - ofaExerciceCloseAssistant: cleanup obsolete tables from the DBMS (todo #1089).
   - ofaFormulaEngine: now has a %IF() function.
   - ofaFormulaEngine: now has arithmetic auto evaluation mode (todo #1084).
   - ofaGuidedInput: add a title to the dialog.
   - ofaPeriodClose: let the period be closed independantly of the ledgers (todo #798).
   - ofaTVARecordProperties: port to new formula engine.
 
 Bug fixes:

   - myIActionMap: activate application accelerators even after dossier opening (todo #1088).
   - myIGridList: fix the line removing.
   - myIWindow: fix key value when saving default position.
   - myIWindow: does not close currently running window when closing the dossier.
   - ofaAccountFrameBin: defaults to select the first row (todo #1085).
   - ofaExerciceCloseAssistant: display again integrity checks (todo #1078).
   - ofaExerciceCloseAssistant: fix future entries management.
   - ofaExerciceCloseAssistant: correctly display plugins tasks (todo #1079).
   - ofaFormulaEngine: fix operation operator backslashing.
   - ofaHub: signaling system is initialized by the application (todo #1077 and #1083).