@@ -1,0 +1,65 @@
+/*
+ * Open Freelance Accounting
+ * A double-entry accounting application for freelances.
+ *
+ * Copyright (C) 2014,2015,2016 Pierre Wieser (see AUTHORS)
+ *
+ * Open Freelance Accounting is free software; you can redistribute it
+ * and/or modify it under the terms of the GNU General Public License as
+ * published by the Free Software Foundation; either version 2 of the
+ * License, or (at your option) any later version.
+ *
+ * Open Freelance Accounting is distributed in the hope that it will be
+ * useful, but WITHOUT ANY WARRANTY; without even the implied warranty
+ * of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
+ * General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with Open Freelance Accounting; see the file COPYING. If not,
+ * see <http://www.gnu.org/licenses/>.
+ *
+ * Authors:
+ *   Pierre Wieser <pwieser@trychlos.org>
+ */
+
+#ifndef __MY_API_MY_NOMODAL_WINDOW_H__
+#define __MY_API_MY_NOMODAL_WINDOW_H__
+
+/**
+ * SECTION: my_nomodal_window
+ * @short_description: #myNomodalWindow class definition.
+ * @include: my/ofa-nomodal-page.h
+ *
+ * Open a non-modal window as a DnD target.
+ */
+
+#include <gtk/gtk.h>
+
+G_BEGIN_DECLS
+
+#define MY_TYPE_NOMODAL_WINDOW                ( my_nomodal_window_get_type())
+#define MY_NOMODAL_WINDOW( object )           ( G_TYPE_CHECK_INSTANCE_CAST( object, MY_TYPE_NOMODAL_WINDOW, myNomodalWindow ))
+#define MY_NOMODAL_WINDOW_CLASS( klass )      ( G_TYPE_CHECK_CLASS_CAST( klass, MY_TYPE_NOMODAL_WINDOW, myNomodalWindowClass ))
+#define MY_IS_NOMODAL_WINDOW( object )        ( G_TYPE_CHECK_INSTANCE_TYPE( object, MY_TYPE_NOMODAL_WINDOW ))
+#define MY_IS_NOMODAL_WINDOW_CLASS( klass )   ( G_TYPE_CHECK_CLASS_TYPE(( klass ), MY_TYPE_NOMODAL_WINDOW ))
+#define MY_NOMODAL_WINDOW_GET_CLASS( object ) ( G_TYPE_INSTANCE_GET_CLASS(( object ), MY_TYPE_NOMODAL_WINDOW, myNomodalWindowClass ))
+
+typedef struct {
+	/*< public members >*/
+	GtkWindow      parent;
+}
+	myNomodalWindow;
+
+typedef struct {
+	/*< public members >*/
+	GtkWindowClass parent;
+}
+	myNomodalWindowClass;
+
+GType            my_nomodal_window_get_type( void ) G_GNUC_CONST;
+
+myNomodalWindow *my_nomodal_window_new     ( GtkWindow *source );
+
+G_END_DECLS
+
+#endif /* __MY_API_MY_NOMODAL_WINDOW_H__ */
